--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,39 @@
+body,html {
+    margin: 0;
+    padding: 0;
+}
+.screen-wrapper {
+    width: 100vw;
+    height: 100v
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.otp-container {
+    width: 600px;
+    padding: 20px;
+    border: 2px solid black;
+   border-radius: 10px;
+   text-align: center;
+}
+.otp-input {
+    width: 64px;
+    height: 100px;
+    font-size: 80px;
+    
+    text-align: center;
+    margin: 0 4px;
+} 
+.otp-input:focus {
+    outline: 1px solid blue;
+}
+.foot-note {
+    background-color:#eaeaea ;
+    color:#b7b7b7 ;
+   width: 400px;
+   border-radius: 5px;
+   margin: auto;
+   margin-top: 20px;
+   padding: 5px;
+}
 
