--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,91 @@
-body,html {
-    margin: 0;
-    padding: 0;
-}
-.screen-wrapper {
-    width: 100vw;
-    height: 100v
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    background-image: linear-gradient(142deg,#9861c2, #5cc0de);
+    font-family: "Lato", sans-serif;
+    height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
-}
-.otp-container {
-    width: 600px;
-    padding: 20px;
-    border: 2px solid black;
-   border-radius: 10px;
-   text-align: center;
-}
-.otp-input {
-    width: 64px;
-    height: 100px;
-    font-size: 80px;
-    
+    justify-content: center;
+    overflow: hidden;
+    margin: 0;
+  }
+  
+  .container{
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+    padding: 30px;
+    max-width: 1000px;
     text-align: center;
-    margin: 0 4px;
-} 
-.otp-input:focus {
-    outline: 1px solid blue;
-}
-.foot-note {
-    background-color:#eaeaea ;
-    color:#b7b7b7 ;
-   width: 400px;
-   border-radius: 5px;
-   margin: auto;
-   margin-top: 20px;
-   padding: 5px;
-}
-
+  }
+  
+  .code-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 0;
+  }
+  
+  .code{
+    caret-color: transparent;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 10px;
+    border: 1px solid #eee;
+    font-size: 30px;
+    font-family: "Lato", sans-serif;
+    width: 75px;
+    height: 80px;
+    margin: 10px;
+    text-align: center;
+    font-weight: 300;
+  }
+  
+  @media (max-width: 600px) {
+    .code-container{
+      flex-wrap: wrap;
+    }
+    .code{
+      font-size: 24px;
+      height: 50px;
+      max-width: 50px;
+      font-size: bold;
+    }
+  }
+  
+  .code::-webkit-outer-spin-button,
+  .code::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+  
+  .code:valid {
+    border-color: #9861c2;
+    box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.25);
+  }
+  
+  .btn{
+    font-family: "Lato", sans-serif;
+    min-width: 400px;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    cursor: pointer;
+    border: 1px solid transparent;
+    margin: 0px 0px 20px 0px;
+    padding: 0.775rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 10px;
+    text-transform: uppercase;
+    letter-spacing: 0.7;
+  }
+  
+  .btn-primary{
+    color: #fff;
+    background-color: #9861c2;
+    border-color: #9861c2;
+  }
+  
